WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282676
View transition old snapshots don't get flushed until we try to use them
https://bugs.webkit.org/show_bug.cgi?id=282676
Summary
View transition old snapshots don't get flushed until we try to use them
Matt Woodrow
Reported
2024-11-06 00:01:29 PST
We should flush them early, so that they are hopefully complete when we come to render them.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-06 00:01:51 PST
<
rdar://problem/139339149
>
Matt Woodrow
Comment 2
2024-11-06 00:03:08 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36250
EWS
Comment 3
2024-11-13 12:07:23 PST
Committed
286553@main
(0c3e3e18a165): <
https://commits.webkit.org/286553@main
> Reviewed commits have been landed. Closing PR #36250 and removing active labels.
EWS
Comment 4
2024-12-03 14:50:43 PST
Committed
283286.552@safari-7620-branch
(ce901e53947f): <
https://commits.webkit.org/283286.552@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2363 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug